test/types/scalar/bradc/valAsType.good
valAsType.chpl:1: error: invalid type specification
